[project]
name = "cyber"
version = "0.1.0"
description = "The Cybersecurity Analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "gradio>=6.2.0",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "openai-agents>=0.6.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
